--- a/public/nav.html
+++ b/public/nav.html
@@ -1,12 +1,12 @@
  <nav class="container">
   <div id="nav-container">
-    <div id="logo" class="pull-left"><a href="index.html">
+    <div id="logo" class="pull-left"><a href="/">
       <strong>{</strong>Algorithm Platform<strong>}</strong>
     </a></div>
     <div class="pull-right">
           <ul class="top-social no-bottom-margin">
-            <li><a href="question.html" title="list of uqestions" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-th-list"></i></a></li>
-            <li><a href="browseTag.html" title="list of tags" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-tag "></i></a></li>
+            <li><a href="question" title="list of uqestions" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-th-list"></i></a></li>
+            <li><a href="browse" title="list of tags" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-tag "></i></a></li>
             <li><a href="#" title="Share by email" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-envelope-o "></i></a></li>
             <li><a href="#" title="Fork on Github" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-github"></i></a></li>
           </ul>
